done with half of lec 22

--- a/12_Ch_13_Optimization/143-backprop.ipynb
+++ b/12_Ch_13_Optimization/143-backprop.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/12_Ch_13_Optimization/143-backprop.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 22 - An Introduction to Backpropagation.pdf>`"
    ]
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be\n",
+    "Material related to this page, as well as additional exercises, can be found in LLA Chapter 9.2. Reviewing CalcBLUE2 Chapter 5 on the chain rule is recommended.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
@@ -52,127 +52,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\textbf{Mach. Learning -- Midterm}\n",
+    "## Backpropagation: Motivation\n",
     "\n",
     "Last class, we studied the unconstrained optimization\n",
     "\n",
     "\\begin{equation}\n",
-    "\\text{minimize } f(x) \\tag{P}\n",
+    "\\label{uncon_opt}\n",
+    "\\text{minimize } f(\\vv x)\n",
     "\\end{equation}\n",
     "\n",
-    "over $x \\in \\mathbb{R}^n$, where we look for the $x \\in \\mathbb{R}^n$ that makes the value of the cost function $f: \\mathbb{R}^n \\to \\mathbb{R}$ as small as possible. We saw that one way to find either a local or global minimum $x^*$ is gradient descent. Starting at an initial guess $x^{(0)}$, we iteratively update our guess via\n",
+    "over $\\vv x \\in \\mathbb{R}^n$, where we look for the $\\vv x \\in \\mathbb{R}^n$ that makes the value of the cost function $f: \\mathbb{R}^n \\to \\mathbb{R}$ as small as possible. We saw that one way to find either a local or global minimum $\\vv x^*$ is gradient descent. Starting at an initial guess $\\vv x^{(0)}$, we iteratively update our guess via\n",
     "\n",
     "\\begin{equation}\n",
-    "x^{(k+1)} = x^{(k)} - s \\nabla f(x^{(k)}), \\quad k = 0, 1, 2, \\ldots \\tag{GD}\n",
+    "\\label{GD}\n",
+    "\\vv x^{(k+1)} = \\vv x^{(k)} - s \\nabla f(\\vv x^{(k)}), \\quad k = 0, 1, 2, \\ldots \\text{(GD)}\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\nabla f(x^{(k)}) \\in \\mathbb{R}^n$ is the gradient of $f$ evaluated at the current guess, and $s > 0$ is a step size chosen large enough to make progress towards $x^*$, but not so big as to overshoot.\n",
+    "where $\\nabla f(\\vv x^{(k)}) \\in \\mathbb{R}^n$ is the gradient of $f$ evaluated at the current guess, and $s > 0$ is a step size chosen large enough to make progress towards $\\vv x^*$, but not so big as to overshoot.\n",
     "\n",
-    "Today, we'll focus our attention on optimization problems (P) for which the cost function takes the following special form\n",
+    "Today, we'll focus our attention on optimization problems [](#uncon_opt) for which the cost function takes the following special form\n",
     "\n",
     "\\begin{equation}\n",
-    "f(x) = \\sum_{i=1}^N f_i(x), \\tag{S}\n",
+    "\\label{cost}\n",
+    "f(\\vv x) = \\sum_{i=1}^N f_i(\\vv x),\n",
     "\\end{equation}\n",
     "\n",
-    "i.e., cost functions $f$ that decompose into a sum of $N$ \"sub-costs\" $f_i$. Problems with cost functions of the form (S) are particularly common in machine learning.\n",
+    "i.e., cost functions $f$ that decompose into a sum of $N$ \"sub-costs\" $f_i$. Problems with cost functions of the form [](#cost) are particularly common in machine learning.\n",
     "\n",
-    "For example, a typical problem setup in machine learning is as follows (we saw an example of this when we studied least squares for classification). We are given a set of training data $\\{(z_i, y_i)\\}_{i=1}^N$, comprised of inputs $z_i \\in \\mathbb{R}^m$ and outputs $y_i \\in \\mathbb{R}^p$. Our goal is to find a set of weights $x \\in \\mathbb{R}^n$ which parametrize a model $m(z_i; x) \\approx y_i$ on our training data. A common way of doing this is to minimize a loss function of the form\n",
+    "For example, a typical problem setup in machine learning is as follows (we saw an example of this when we studied least squares for data-fitting). We are given a set of _training data_ $\\{(\\vv z_i, \\vv y_i)\\}, i=1, \\ldots, N$, comprised of \"inputs\" $\\vv z_i \\in \\mathbb{R}^p$ and \"outputs\" $\\vv y_i \\in \\mathbb{R}^p$. Our goal is to find a set of weights $\\vv x \\in \\mathbb{R}^n$ which parametrize a model such that $m(\\vv z_i; \\vv x) \\approx \\vv y_i$ on our training data. A common way of doing this is to minimize a _loss function_ of the form\n",
     "\n",
     "\\begin{equation}\n",
-    "\\text{loss}(\\{(z_i, y_i)\\}; x) = \\frac{1}{N} \\sum_{i=1}^N \\ell(m(z_i; x) - y_i) \\tag{L}\n",
+    "\\label{loss}\n",
+    "\\text{loss}((\\vv z_i, \\vv y_i); \\vv x) = \\frac{1}{N} \\sum_{i=1}^N \\ell(m(\\vv z_i; \\vv x) - \\vv y_i),\n",
     "\\end{equation}\n",
     "\n",
-    "where each term $\\ell(m(z_i; x) - y_i)$ is a term penalizing the difference between our model prediction $m(z_i; x)$ on input $z_i$ and the observed output $y_i$. In this setting, the loss function (L) takes the form (S), with $f_i = \\frac{1}{N} \\ell(m(z_i; x) - y_i)$ the error on training sample $(z_i, y_i)$ and the true output $y_i$.\n",
+    "where each term $\\ell(m(\\vv z_i; \\vv x) - \\vv y_i)$ is a term penalizing the difference between our model prediction $m(\\vv z_i; \\vv x)$ on input $\\vv z_i$ and the observed output $\\vv y_i$. In this setting, the loss function [](#loss) takes the form [](#cost), with $f_i = \\frac{1}{N} \\ell(m(\\vv z_i; \\vv x) - \\vv y_i)$ the error between our prediction $\\hat{\\vv y}_i = m(\\vv z_i; \\vv x)$ and the true output $\\vv y_i$.\n",
     "\n",
-    "A common\n",
-    "choice for the \"sub-loss\" function is $\\ell(e) = \\|e\\|^2$, leading to an least-squares regression problem, but note that most other choices of loss function are compatible with the following discussion."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now suppose that we want to implement gradient descent (GD) on the loss function (L). Our first step is to compute the gradient $\\nabla_x \\text{loss}(\\{(z_i,y_i)\\};x)$. Because of the sum structure of (L), we have that:\n",
+    "A common choice for the \"sub-loss\" function is $\\ell(\\vv e) = \\|\\vv e\\|^2$, leading to a least-squares regression problem, but note that most other choices of loss function are compatible with the following discussion.\n",
+    "\n",
+    "Now suppose that we want to implement gradient descent [(GD)](#GD) on the loss function [](#loss). Our first step is to compute the gradient $\\nabla_{\\vv x} \\text{loss}((\\vv z_i, \\vv y_i); \\vv x)$. Because of the sum structure of [](#loss), we have that:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\nabla_x \\text{loss}(\\{(z_i,y_i)\\};x) = \\frac{1}{N} \\sum_{i=1}^N \\nabla_x \\ell(m(z_i;x) - y_i),\n",
+    "\\nabla_{\\vv x} \\text{loss}((\\vv z_i,\\vv y_i);\\vv x) = \\frac{1}{N} \\sum_{i=1}^N \\nabla_{\\vv x} \\ell(m(\\vv z_i; \\vv x) - \\vv y_i),\n",
     "\\end{equation}\n",
     "\n",
     "i.e., the gradient of the loss function is the sum of the gradients of the \"sub-losses\" on each of the $i=1,\\ldots,N$ data points.\n",
     "\n",
-    "Our task now is therefore to compute the gradient $\\nabla_x \\ell(m(z_i;x)-y_i)$. This requires the multivariate chain rule, as $f_i(x) = \\ell(m(z_i;x)-y_i)$ is a composition of the functions $\\ell(e), e = m(z_i;x) - y_i$, and $m(z_i;x)$.\n",
-    "\n",
-    "The Multivariate Chain Rule (Calculus 3 Ch.5)\n",
-    "\n",
-    "We begin with a reminder of the chain rule for scalar functions. Let $f:\\mathbb{R}\\to\\mathbb{R}$ and $g:\\mathbb{R}\\to\\mathbb{R}$ be differentiable functions. Then for $h(x) = g(f(x))$, we have that:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "h'(x) = g'(f(x)) f'(x). \\tag{C1}\n",
-    "\\end{equation}\n",
-    "\n",
-    "If we define $y = g(t)$ and $t = f(x)$, then we can rewrite (C1) as $\\frac{dh}{dx} = \\frac{dg}{dt} \\cdot \\frac{df}{dx}$. This is a useful way of writing things as we can \"cancel\" $dt$ on the RHS to check that our formula is correct.\n",
-    "\n",
-    "\\textcolor{red}{WARNING: $\\frac{dh}{dx} = \\frac{dg}{dt} \\cdot \\frac{df}{dx}$ is shorthand for $h'(x) = g'(f(x))f'(x)$. The cancellation points are lies!}\n",
-    "\n",
-    "Generalizing slightly, suppose now that $f:\\mathbb{R}^n\\to\\mathbb{R}$ maps a vector $x\\in\\mathbb{R}^n$ to $f(x)\\in\\mathbb{R}$. Then for $h(x) = g(f(x))$, we have:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\nabla_x h(x) = g'(f(x)) \\nabla f(x), \\tag{C2}\n",
-    "\\end{equation}\n",
-    "\n",
-    "which we see is a natural generalization of equation (C1). It will be convenient for us later to define $\\frac{df}{dx} = \\nabla f(x)^T$ and $\\frac{dh}{dx} = \\nabla h(x)^T$. Again defining $y = g(t)$ and $t = f(x), we can rewrite (C2) as $\\frac{dh}{dx} = \\frac{dg}{dt} \\cdot \\frac{df}{dx}$, which looks exactly the same as before!\n",
-    "\n",
-    "\\textcolor{red}{WARNING: $\\frac{dh}{dx} = \\frac{dg}{dt} \\cdot \\frac{df}{dx}$ is shorthand for $h'(x) = g'(f(x))\\frac{df}{dx}$. The cancellation points are lies!}\n",
-    "\n",
-    "Now, let's apply these ideas to computing the gradient of $h(x) = \\ell(m(z_i;x)-y_i)$, where we'll assume for now that $m(z_i;x), y_i \\in \\mathbb{R}$. Applying (C2), we get\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\nabla_x h(x) = \\ell'(m(z_i;x)-y_i) \\cdot \\nabla_x (m(z_i;x) - y_i) = \\ell'(m(z_i;x)-y_i) \\cdot \\nabla_x m(z_i;x)\n",
-    "\\end{equation}"
+    "Our task now is therefore to compute the gradient $\\nabla_{\\vv x} \\ell(m(\\vv z_i; \\vv x)- \\vv y_i)$. This requires the _multivariate chain rule_, as $f_i(\\vv x) = \\ell(m(\\vv z_i;\\vv x)-\\vv y_i)$ is a _composition_ of the functions $\\ell(\\vv e), \\vv e = \\vv w - \\vv y_i$, and $\\vv w = m(\\vv z_i;\\vv x)$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where we use that $\\nabla_x y_i = 0$ (since it's a constant). Without knowing more about the functions $\\ell$ and $m$, this is all we can say.\n",
+    "## The Multivariate Chain Rule (CalcBLUE 2 Ch.5)\n",
     "\n",
-    "Example: Suppose $\\ell(e) = \\frac{1}{2}e^2$ and $m(z_i; x) = x^Tz_i$. Then\n",
-    "\\[\\ell(m(z_i;x)-y_i) = \\frac{1}{2}(x^Tz_i - y_i)^2 \\text{ and } \\nabla_x \\ell(m(z_i;x)-y_i) = (x^Tz_i - y_i) \\cdot z_i\\]\n",
-    "\\[                                                                                        \\underbrace{\\ell'(m-y_i)}\\cdot \\underbrace{\\nabla_x m}\\]\n",
-    "\n",
-    "Next class we will have a brief introduction to deep learning. In deep learning, the function $m(z_i; x)$ is often parameterized as a \"chain of function compositions\"\n",
-    "\n",
-    "\\[m(z_i; x) = M_L(M_{L-1}(\\cdots(M_2(M_1(z_i))))) \\tag{NN}\\]\n",
-    "\\[= M_L \\circ M_{L-1} \\circ \\cdots \\circ M_2 \\circ M_1(z_i).\\]\n",
-    "\n",
-    "A more suggestive way of writing this parameterization (that also highlights the dependence on $x$) is\n",
-    "\n",
-    "\\begin{align*}\n",
-    "O_0 &= z_i \\\\\n",
-    "O_1 &= M_1(O_0; x_1) & O_1 \\in \\mathbb{R}^{n_1}, O_0 \\in \\mathbb{R}^{n_0} \\tag{NNN} \\\\\n",
-    "O_2 &= M_2(O_1; x_2) & O_2 \\in \\mathbb{R}^{n_2}, O_1 \\in \\mathbb{R}^{n_1} \\\\\n",
-    "&\\vdots \\\\\n",
-    "O_L &= M_L(O_{L-1}; x_L) & O_L \\in \\mathbb{R}^{n_L}, O_{L-1} \\in \\mathbb{R}^{n_{L-1}}\n",
-    "\\end{align*}\n",
-    "\n",
-    "Here the model parameters $x = (x_1, \\ldots, x_L)$ we split across the layers $1, \\ldots, L$. The intermediate outputs $O_i$ can be of different dimensions, as can the layer parameters $x_i$. While \\eqref{NN} and \\eqref{NNN} are equivalent, \\eqref{NNN} makes explicit the dependence on the model parameters $x$ (which are typically thought of as being \"attached\" to the individual layers $\\ell$ forward). Our goal is then to compute $\\nabla_x \\ell(m(z_i;x)-y_i)$ for $m$ of the form \\eqref{NN}, and where $m: z_i \\in \\mathbb{R}^{n_0} \\mapsto O_L \\in \\mathbb{R}^{n_L}$ we now allow possibly vector-valued. To do this, we need the fully general multivariate chain rule.\n",
-    "\n",
-    "For $h(x) = g(f(x))$ with vector-valued $f: \\mathbb{R}^n \\to \\mathbb{R}^p$ and $g: \\mathbb{R}^p \\to \\mathbb{R}^m$, we need to define the Jacobian matrices for $f$ and $g$:\n",
+    "We begin with a reminder of the chain rule for scalar functions. Let $f:\\mathbb{R}\\to\\mathbb{R}$ and $g:\\mathbb{R}\\to\\mathbb{R}$ be differentiable functions. Then for $h(x) = g(f(x))$, we have that:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{df}{dx} = \\begin{bmatrix}\n",
+    "\\label{c1}\n",
+    "h'(x) = g'(f(x)) f'(x). \n",
+    "\\end{equation}\n",
+    "\n",
+    "If we define $g = g(f)$ and $f = f(x)$, then we can rewrite [](#c1) as $\\frac{dh}{dx} = \\frac{dg}{df}\\cdot\\frac{df}{dx}$. This is a useful way of writing things as we can \"cancel\" $df$ on the RHS to check that our formula is correct.\n",
+    "\n",
+    ":::{warning}\n",
+    "$\\frac{dh}{dx} = \\frac{dg}{df} \\cdot \\frac{df}{dx}$ is shorthand for $\\frac{dh}{dx}(x) = \\frac{dg}{df}(f(x))\\frac{df}{dx}(x)$. The evaluation points matter!\n",
+    ":::\n",
+    "\n",
+    "Generalizing slightly, suppose now that $f:\\mathbb{R}^n\\to\\mathbb{R}$ maps a vector $\\vv x\\in\\mathbb{R}^n$ to $f(\\vv x)\\in\\mathbb{R}$. Then for $h(x\\vv ) = g(f(\\vv x))$, we have:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{c2}\n",
+    "\\nabla_{\\vv x} h(\\vv x) = g'(f(\\vv x)) \\nabla f(\\vv x),\n",
+    "\\end{equation}\n",
+    "\n",
+    "which we see is a natural generalization of equation [](#c1). It will be convenient for us later to define $\\frac{df}{d \\vv x} = \\nabla_{\\vv x} f(\\vv x)^T$ and $\\frac{dh}{d \\vv x} = \\nabla_{\\vv x} h(\\vv x)^T$. Again defining $g = g(f)$ and $f = f(\\vv x)$, we can rewrite [](#c2) as $\\frac{dh}{d \\vv x} = \\frac{dg}{df} \\cdot \\frac{df}{d \\vv x}$, which looks exactly the same as before!\n",
+    "\n",
+    ":::{warning}\n",
+    "$\\frac{dh}{d\\vv x} = \\frac{dg}{df} \\cdot \\frac{df}{d \\vv x}$ is shorthand for $\\frac{dh}{d \\vv x}(\\vv x) = \\frac{dg}{df}(f(\\vv x))\\frac{df}{d \\vv x}(\\vv x)$. The evaluation points matter!\n",
+    ":::\n",
+    "\n",
+    "Now, let's apply these ideas to computing the gradient of $h(\\vv x) = \\ell(m(\\vv z_i; \\vv x)-  y_i)$, where we'll assume for now that $m(\\vv z_i;\\vv x), y_i \\in \\mathbb{R}$. Applying [](#c2), we get\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\nabla_{\\vv x} h(\\vv x) = \\ell'(m(\\vv z_i;\\vv x)-y_i) \\cdot \\nabla_{\\vv x} (m(\\vv z_i;\\vv x) - y_i) = \\ell'(m(\\vv z_i;\\vv x)-y_i) \\cdot \\nabla_{\\vv x} m(\\vv z_i; \\vv x)\n",
+    "\\end{equation}\n",
+    "\n",
+    "where we use that $\\nabla_{\\vv x} y_i = 0$ (since it's a constant). Without knowing more about the functions $\\ell$ and $m$, this is all we can say."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    ":::{prf:example}\n",
+    ":label: eg1\n",
+    "Suppose $\\ell(e) = \\frac{1}{2}e^2$ and $m(\\vv z_i; \\vv x) = \\vv x^T \\vv z_i$. Then\n",
+    "$$\n",
+    "\\ell(m(\\vv z_i;\\vv x)-y_i) = \\frac{1}{2}(\\vv x^T\\vv z_i - y_i)^2 \\text{ and } \\nabla_{\\vv x} \\ell(m(\\vv z_i; \\vv x)-y_i) = \\underbrace{(\\vv x^T\\vv z_i - y_i)}_{\\ell'(m - y_i)} \\cdot \\underbrace{\\vv z_i}_{\\nabla_{\\vv x} m}\n",
+    "$$\n",
+    "\n",
+    "Next lecture we will have a brief introduction to deep learning. In deep learning, the function $m(\\vv z_i; \\vv x)$ is often parameterized as a _chain of function compositions_:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{DN}\n",
+    "\\vv m(\\vv z_i; \\vv x) &= \\vv m_L(\\vv m_{L-1}(\\cdots(\\vv m_2(\\vv m_1(\\vv z_i))\\cdots)) \\\\\n",
+    "&= \\vv m_L \\circ \\vv m_{L-1} \\circ \\cdots \\circ \\vv m_2 \\circ \\vv m_1(\\vv z_i).\n",
+    "\\end{equation}\n",
+    "\n",
+    "A more suggestive way of writing this parameterization (that also highlights the dependence on $\\vv x$) is\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{DNN}\n",
+    "\\vv O_0 &= \\vv z_i &  \\\\\n",
+    "\\vv O_1 &= \\vv m_1(\\vv O_0; \\vv x_1) & \\vv O_1 \\in \\mathbb{R}^{p_1}, \\vv O_0 \\in \\mathbb{R}^{p_0}  \\\\\n",
+    "\\vv O_2 &= \\vv m_2(\\vv O_1; \\vv x_2) & \\vv O_2 \\in \\mathbb{R}^{p_2}, \\vv O_1 \\in \\mathbb{R}^{p_1} \\\\\n",
+    "&\\vdots & \\vdots \\\\\n",
+    "\\vv O_L &= \\vv m_L(\\vv O_{L-1}; \\vv x_L) & \\vv O_L \\in \\mathbb{R}^{p_L}, \\vv O_{L-1} \\in \\mathbb{R}^{p_{L-1}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Here the model parameters \\vv $x = (\\vv x_1, \\ldots, \\vv x_L)$ we split across the _layers $1, \\ldots, L$_. The intermediate outputs $\\vv O_i$ can be of different dimensions, as can the layer parameters $\\vv x_i$. Writing [](#DN) as [](#DNN) highlights why these functions are called deep neural networks as the number of layers $L$ increases. Our goal is then to compute $\\nabla_{\\vv x} \\ell(m(\\vv z_i; \\vv x)-\\vv y_i)$ for $m$ of the form [](#DN), and where $m, y_i \\in \\mathbb{R}^{p_L}$ are now also possibly vector-valued. To do this, we need the fully general multivariable chain rule.\n",
+    "\n",
+    "For $h(\\vv x) = g(f(\\vv x))$ with vector-valued $\\vv f: \\mathbb{R}^n \\to \\mathbb{R}^p$ and $\\vv g: \\mathbb{R}^p \\to \\mathbb{R}^m$, we need to define the _Jacobian matrices_ for $\\vv f$ and $\\vv g$:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{jac}\n",
+    "\\frac{d\\vv f}{d\\vv x} = \\bm \\frac{d f_1}{d \\vv x} \\\\ \\vdots \\\\ \\frac{d f_p}{d \\vv x} \\em\n",
+    "\\begin{bmatrix}\n",
     "\\frac{\\partial f_1}{\\partial x_1} & \\cdots & \\frac{\\partial f_1}{\\partial x_n} \\\\\n",
     "\\vdots & & \\vdots \\\\\n",
     "\\frac{\\partial f_p}{\\partial x_1} & \\cdots & \\frac{\\partial f_p}{\\partial x_n}\n",
     "\\end{bmatrix}\n",
     "\\quad \\text{and} \\quad\n",
-    "\\frac{dg}{dt} = \\begin{bmatrix}\n",
-    "\\frac{\\partial g_1}{\\partial t_1} & \\cdots & \\frac{\\partial g_1}{\\partial t_p} \\\\\n",
+    "\\frac{d\\vv g}{d \\vv f} = \n",
+    "\\bm \\frac{d f_1}{d \\vv f} \\\\ \\vdots \\\\ \\frac{d g_m}{d \\vv f} \\em\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{\\partial g_1}{\\partial f_1} & \\cdots & \\frac{\\partial g_1}{\\partial f_p} \\\\\n",
     "\\vdots & & \\vdots \\\\\n",
-    "\\frac{\\partial g_m}{\\partial t_1} & \\cdots & \\frac{\\partial g_m}{\\partial t_p}\n",
+    "\\frac{\\partial g_m}{\\partial f_1} & \\cdots & \\frac{\\partial g_m}{\\partial f_p}\n",
     "\\end{bmatrix}\n",
-    "\\tag{J}\n",
     "\\end{equation}\n",
     "\n",
     "as the $p\\times n$ and $m\\times p$ matrices of partial derivatives, respectively."
