condition number python snippet

--- a/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb
+++ b/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb
@@ -68,14 +68,117 @@
     "\n",
     "for any $\\vv x,\\vv y\\in\\mathbb{R}^m$. Therefore, any numerical issues that arise will be due to the diagonal entries of $\\Sigma$, i.e., due to the singular values of $A$.\n",
     "\n",
-    "In particular, if some of singular values are much larger than others, this means certain directions are stretched out much more than others, which can lead to rounding errors. A natural way to quantify this notion is using the singular values of $A$. \n",
+    "In particular, if some of singular values are much larger than others, this means certain directions are stretched out much more than others, which can lead to rounding errors on a computer. A natural way to quantify this notion is using the singular values of $A$. \n",
     "\n",
     ":::{prf:definition} Condition Number\n",
     ":label:cond_defn\n",
     "If $A\\in\\mathbb{R}^{n\\times n}$ is an $n\\times n$ matrix so that $r=\\text{rank}(A) = n$, we define the _condition number of A_ to be the ratio $\\kappa(A) = \\frac{\\sigma_1}{\\sigma_n}$ of the largest to smallest singular values of $A$. If $A$ is not invertible, it is conventional to set $\\kappa(A)=\\infty$, although the ratio $\\frac{\\sigma_1}{\\sigma_r}$ is a useful measure of the numerical stability of computing with a rectangular matrix $A\\in\\mathbb{R}^{m\\times n}$.\n",
     ":::\n",
     "\n",
-    "**TO DO**: Using numpy, show that ill-conditioned $A$ can lead to bad solutions to $Ax=b$ even if $A$ is invertible. Case 1: assume we use $\\sigma_1 = b + n$ for $n$ some small measurement noise. Case 2: just make $A$ super ill-conditioned and show that $x=A^{-1}b$ computed using numpy doesn't actually satisfy $Ax=b$."
+    "#### Python Break!\n",
+    "\n",
+    "In this section, we'll demonstrate the significance of the condition number of the coefficient matrix $A$ when solving a system of linear equations $A\\vv x = \\vv b$ (where in this example, we assume $A$ is square and invertible). We'll give a few illustrative examples of what might go wrong when $A$ has a high condition number $\\kappa(A)$.\n",
+    "\n",
+    "**Sensitivity to the constant vector $b$.** Let's consider what happens when the constant vector $\\vv b$ is replace by the vector $\\vv b + \\vv \\epsilon$, where $\\epsilon$ is some vector representing a \"measurement error\" in $\\vv b$. Let's rewrite the linear system $A\\vv x = \\vv b + \\vv \\epsilon$ as the following:\n",
+    "\n",
+    "$$\n",
+    "&A\\vv x = \\vv b + \\vv \\epsilon \\\\\n",
+    "&\\iff \\vv x = A^{-1} \\vv b + A^{-1} \\vv \\epsilon\n",
+    "$$\n",
+    "\n",
+    "Here, we see that the magnitude of the error in our estimate of $\\vv b$ is $\\|\\vv \\epsilon\\|$, and the magnitude of the error in our solution $\\vv x$ is $\\|A^{-1}\\vv{\\epsilon}\\| = \\| (U\\Sigma V^\\top)^{-1} \\vv \\epsilon\\| = \\|\\Sigma^{-1} \\vv \\epsilon\\|$. Here, we have used the singular value decomposition of $A$, together with the fact that orthogonal matrices preserve norms, to isolate the dependence of the error in $\\vv x$ on $\\vv\\epsilon$. Then, the quantity $\\frac{\\|\\vv \\epsilon\\|}{\\|\\vv b\\|}$ denotes the relative error in the constant vector; and the quantity $\\frac{\\|\\Sigma^{-1}\\vv{\\epsilon}\\|}{\\|\\Sigma^{-1}\\vv{b}\\|}$ denotes the relative error in the solution vector.\n",
+    "\n",
+    "In many applications, we are interested in when small relative changes in the constant vector lead to large changes in the solution vector (this is bad). The ratio of their relative errors is $\\frac{\\|\\Sigma^{-1}\\vv{\\epsilon}\\|}{\\|\\Sigma^{-1}\\vv{b}\\|} \\div \\frac{\\|\\vv \\epsilon\\|}{\\|\\vv b\\|} = \\frac{\\|\\vv b\\|}{\\|\\Sigma^{-1}\\vv{b}\\|} \\cdot \\frac{\\|\\Sigma^{-1}\\vv{\\epsilon}\\|}{\\|\\vv \\epsilon\\|}$. In the very worst case, where $\\vv b$ and $\\vv \\epsilon$ are chosen so that this quantity is maximized, we see that\n",
+    "\n",
+    "$$\n",
+    "\\max_{\\vv b, \\vv \\epsilon} \\left(\\frac{\\|\\vv b\\|}{\\|\\Sigma^{-1}\\vv{b}\\|} \\cdot \\frac{\\|\\Sigma^{-1}\\vv{\\epsilon}\\|}{\\|\\vv \\epsilon\\|}\\right) = \\frac{\\sigma_{\\max}(A^{-1})}{\\sigma_{\\min}(A^{-1})} = \\kappa(A^{-1}) = \\kappa (A).\n",
+    "$$\n",
+    "\n",
+    "Furthermore, this tells us exactly which vectors to pick to achieve this worst case error; we choose $\\vv b$ to be in the direction of the right singular vector corresonding to the *smallest* singular value of $A^{-1}$, and we choose $\\vv \\epsilon$ to be in the direction of the right singular vector corresponding to the *largest* singular value of $A^{-1}$.\n",
+    "\n",
+    "Let's see this in practice. In the following Python code, we define an ill-conditioned coefficient matrix `A` and demonstrate how small relative errors in the constant vector `b` can lead to large relative errors in the solution `x`. Below, we introduce the `np.linalg.svd` function, which returns a tuple `(U, S, Vh)` such that `A = U @ S @ Vh` (here `@` denotes matrix multiplication)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A (note the bottom left entry):\n",
+      " [[0.e+00 0.e+00 1.e+00]\n",
+      " [0.e+00 1.e+00 1.e+00]\n",
+      " [1.e-06 1.e+00 1.e+00]] \n",
+      "\n",
+      "Singular values of A:\n",
+      " [2.13577921e+00 6.62153447e-01 7.07106781e-07] \n",
+      "\n",
+      "Condition number of A:\n",
+      " 3020447.91804474 \n",
+      "\n",
+      "b:\n",
+      " [0.36904818 0.6571923  0.6571923 ] \n",
+      "\n",
+      "eps:\n",
+      " [-3.53580218e-16  7.07106781e-04 -7.07106781e-04] \n",
+      "\n",
+      "Relative error in b:\n",
+      " 0.0009999999999999998 \n",
+      "\n",
+      "Relative error in x:\n",
+      " 3020.447918044611 \n",
+      "\n",
+      "Ratio:\n",
+      " 3020447.918044612 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([\n",
+    "    [   0. ,    0.,     1.,     ],\n",
+    "    [   0.,     1.,     1.      ],\n",
+    "    [   10**-6, 1.,     1.      ]\n",
+    "])\n",
+    "print('A (note the bottom left entry):\\n', A, '\\n')\n",
+    "\n",
+    "singular_values = np.linalg.svd(A).S\n",
+    "print('Singular values of A:\\n', singular_values, '\\n')\n",
+    "\n",
+    "condition_number = max(singular_values) / min(singular_values)\n",
+    "print('Condition number of A:\\n', condition_number, '\\n')\n",
+    "\n",
+    "# Choose b and eps to be in the worst possible directions\n",
+    "U, S, Vh = np.linalg.svd(np.linalg.inv(A))\n",
+    "b = Vh[2, :]\n",
+    "eps = 0.001 * Vh[0, :]\n",
+    "\n",
+    "print('b:\\n', b, '\\n')\n",
+    "print('eps:\\n', eps, '\\n')\n",
+    "\n",
+    "b_rel_error = np.linalg.norm(eps) / np.linalg.norm(b)\n",
+    "print('Relative error in b:\\n', b_rel_error, '\\n')\n",
+    "\n",
+    "Ainv = np.linalg.inv(A)\n",
+    "\n",
+    "x = np.linalg.solve(A, b)\n",
+    "x_rel_error = np.linalg.norm(np.linalg.solve(A, b + eps) - x) / np.linalg.norm(x)\n",
+    "print('Relative error in x:\\n', x_rel_error, '\\n')\n",
+    "\n",
+    "ratio = x_rel_error / b_rel_error\n",
+    "print('Ratio:\\n', ratio, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, for certain choices of `b` and `eps`, we can make the ratio of the relative error blow up all the way to the condition number! This can even be taken to the extreme. If $\\kappa(A)$ is high enough, then even without explicitly adding noise, the computer might not even find a good solution to $A\\vv x = b$! This is because the miniscule amount of noise introduced by floating point precision could get blown up by the ill-conditioning."
    ]
   },
   {
@@ -270,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
