--- a/09_Ch_10_SVD_Apps/111-SVD.ipynb
+++ b/09_Ch_10_SVD_Apps/111-SVD.ipynb
@@ -465,6 +465,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
