--- a/09_Ch_10_SVD_Apps/111-SVD.ipynb
+++ b/09_Ch_10_SVD_Apps/111-SVD.ipynb
@@ -424,8 +424,6 @@
     "You can check that indeed $A = U\\Sigma V^T$ here, and that $U^TU = V^TV = I_2$\n",
     ":::\n",
     "\n",
-    "**TO DO**: Please add example 4 from LAA 7.1, subtly modified to use the compact SVD form.\n",
-    "\n",
     ":::{prf:example} Finding the SVD of a matrix with a zero singular value (Example 4 of LAA 7.1)\n",
     ":label: svd-ex2\n",
     "\n",
@@ -465,15 +463,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{prf:example} The singular value decomposition of a transpose\n",
+    ":label: svd-ex3\n",
+    "\n",
+    "Answer the following questions:\n",
+    "\n",
+    "* Given a singular value decomposition, $A = U\\Sigma V^T$, find an SVD of $A^\\top$. How are the singular values of $A$ and $A^T$ related?\n",
+    "* For any $n \\times n$ matrix $A$, use the SVD to show that there is an $n \\times n$ orthogonal matrix $Q$ such that $A^TA = Q^T(A^TA)Q$.\n",
+    "\n",
+    "**Remark.** This problem establishes that for any $n \\times n$ matrix $A$, the matrices $AA^T$ and $A^TA$ are orthogonally similar.\n",
+    "\n",
+    "\n",
+    "\n",
+    "```{solution} my-exercise\n",
+    ":class: dropdown\n",
+    "\n",
+    "If $A = U\\Sigma V^T$, where $\\Sigma$ is $m \\times n$, then $A^T = (V^T)^T \\Sigma^T U^T = V\\Sigma^T U^T$. This is an SVD of $A^T$ because $V$ and $U$ are orthogonal matrices and $\\Sigma^T$ is an $n \\times m$ ``diagonal'' matrix. Since $\\Sigma$ and $\\Sigma^T$ have the same nonzero diagonal entries, $A$ and $A^T$ have the same nonzero singular values. (Note: If $A$ is $2 \\times n$, then $AA^T$ is only $2 \\times 2$ and its eigenvalues may be easier to compute (by hand) than the eigenvalues of $A^TA$.)\n",
+    "\n",
+    "Use the SVD to write $A = U\\Sigma V^T$, where $U$ and $V$ are $n \\times n$ orthogonal matrices and $\\Sigma$ is an $n \\times n$ diagonal matrix. Notice that $U^TU = I = V^TV$ and $\\Sigma^T = \\Sigma$, since $U$ and $V$ are orthogonal matrices and $\\Sigma$ is a diagonal matrix. Substituting the SVD for $A$ into $AA^T$ and $A^TA$ results in\n",
+    "    \n",
+    "$$\n",
+    "AA^T = U\\Sigma V^T(U\\Sigma V^T)^T = U\\Sigma V^TV\\Sigma^T U^T = U\\Sigma\\Sigma^T U^T = U\\Sigma^2 U^T,\n",
+    "$$\n",
+    "    \n",
+    "and\n",
+    "    \n",
+    "$$\n",
+    "A^TA = (U\\Sigma V^T)^T U\\Sigma V^T = V\\Sigma^T U^TU\\Sigma V^T = V\\Sigma^T\\Sigma V^T = V\\Sigma^2 V^T.\n",
+    "$$\n",
+    "    \n",
+    "Let $Q = VU^T$. Then\n",
+    "    \n",
+    "$$\n",
+    "Q^T(A^TA)Q = (VU^T)^T(V\\Sigma^2 V^T)(VU^T) = UV^TV\\Sigma^2 V^TVU^T = U\\Sigma^2 U^T = AA^T.\n",
+    "$$\n",
+    "\n",
+    "```\n",
+    ":::"
+   ]
   },
   {
    "cell_type": "markdown",
