commented out unrelatedexample in svd section

--- a/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb
+++ b/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Check what is the below practice problem**\n",
+    "<!-- **Check what is the below practice problem**\n",
     "\n",
     "Let $\\mathbf{p}_1 = \\begin{bmatrix} 1 \\\\ 0 \\\\ 2 \\end{bmatrix}$, \n",
     "$\\mathbf{p}_2 = \\begin{bmatrix} -1 \\\\ 2 \\\\ 1 \\end{bmatrix}$, \n",
@@ -313,7 +313,7 @@
     "\n",
     "Thus $x_1 = -\\frac{10}{3} + \\frac{5}{3}x_3$, $x_2 = \\frac{1}{3} + \\frac{1}{3}x_3$, $x_3 = x_3$. Let \n",
     "$\\mathbf{p} = \\begin{bmatrix} -\\frac{10}{3} \\\\ \\frac{1}{3} \\\\ 0 \\end{bmatrix}$ and \n",
-    "$\\mathbf{v} = \\begin{bmatrix} \\frac{5}{3} \\\\ \\frac{1}{3} \\\\ 1 \\end{bmatrix}$. The general solution can be written as $\\mathbf{x} = \\mathbf{p} + x_3\\mathbf{v}$. Thus $H_1 \\cap H_2$ is the line through $\\mathbf{p}$ in the direction of $\\mathbf{v}$. Note that $\\mathbf{v}$ is orthogonal to both $\\mathbf{n}_1$ and $\\mathbf{n}_2$."
+    "$\\mathbf{v} = \\begin{bmatrix} \\frac{5}{3} \\\\ \\frac{1}{3} \\\\ 1 \\end{bmatrix}$. The general solution can be written as $\\mathbf{x} = \\mathbf{p} + x_3\\mathbf{v}$. Thus $H_1 \\cap H_2$ is the line through $\\mathbf{p}$ in the direction of $\\mathbf{v}$. Note that $\\mathbf{v}$ is orthogonal to both $\\mathbf{n}_1$ and $\\mathbf{n}_2$. -->"
    ]
   },
   {
