--- a/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb
+++ b/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb
@@ -224,7 +224,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,7 +270,14 @@
     "- $S_{ii}$ = variance of measurement $i$ across measurements $j=1,\\ldots,N$\n",
     "- $S_{kl}$ = cvariance of measurements $k$ and $l$ across measurements $j=1,\\ldots,N$.\n",
     "\n",
-    "**TO DO** Please include examples of correlated, anticorrelated, and uncorrelated vectors, e.g., Fig 3.8 from VMLS."
+    ":::{prf:example}  Correlated, anticorrelated, and uncorrelated vectors (Fig 3.8 from VLMS)\n",
+    ":label: basics-ex1\n",
+    "\n",
+    "Below, we 3 pairs of time series (labelled $a_k$ and $b_k$), exhibiting positive correlation, negative correlation, and little/no correlation respectively.\n",
+    "\n",
+    "![alt text](../figures/12-correlated_vectors.png)\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -280,13 +286,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
