--- a/12_Ch_13_Optimization/141-Unconstrained.ipynb
+++ b/12_Ch_13_Optimization/141-Unconstrained.ipynb
@@ -182,7 +182,7 @@
     "But \n",
     "$$f(\\theta \\vv x + (1-\\theta)\\vv y) = A(\\theta \\vv x + (1-\\theta)\\vv y) - \\vv b = \\theta (A\\vv x - \\vv b) + (1-\\theta)(A\\vv y - \\vv b) = \\theta f(\\vv x) + (1-\\theta)f(\\vv y)\n",
     "$$\n",
-    "Affine functions are on the \"boundary\" of being convex.\n",
+    "Affine functions are on the \"boundary\" of being convex, in the sense that if $f(\\vv x)$ is an affine function, then $-f(\\vv x)$ is also an affine function and hence is convex. Affine functions are the only functions $f$ for which both $f$ and $-f$ are convex!\n",
     ":::\n",
     "\n",
     ":::{prf:example}\n",
