title changes Ch 10-12

--- a/09_Ch_10_Singular_Value_Decomposition/111-SVD.ipynb
+++ b/09_Ch_10_Singular_Value_Decomposition/111-SVD.ipynb
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Singular Value Decomposition\n",
+    "## Computing the SVD\n",
     "\n",
     "The decomposition of $A$ involves an $r \\times r$ diagonal matrix $\\Sigma$ of the form\n",
     "\n",
@@ -478,7 +478,7 @@
     "\n",
     "\n",
     "\n",
-    "```{solution} my-exercise\n",
+    "```{solution} svd-ex3\n",
     ":class: dropdown\n",
     "\n",
     "If $A = U\\Sigma V^T$, where $\\Sigma$ is $m \\times n$, then $A^T = (V^T)^T \\Sigma^T U^T = V\\Sigma^T U^T$. This is an SVD of $A^T$ because $V$ and $U$ are orthogonal matrices and $\\Sigma^T$ is an $n \\times m$ ``diagonal'' matrix. Since $\\Sigma$ and $\\Sigma^T$ have the same nonzero diagonal entries, $A$ and $A^T$ have the same nonzero singular values. (Note: If $A$ is $2 \\times n$, then $AA^T$ is only $2 \\times 2$ and its eigenvalues may be easier to compute (by hand) than the eigenvalues of $A^TA$.)\n",
